# fast_af

./: CMakeLists.txt  CMakePresets.json  fast_af.cpp
